Canvis endpoints comments
